fixed issue with socual media icons overlappig with form, byt setting height to min of 100vh

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -246,6 +246,7 @@ main {
     background-position: 75%;
     padding: 20px 10% 0 10%;
     flex-grow: 1;
+    min-height :100vh; 
 }
 
 #signup-form {
